Fixed CSS styling

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <div class="location-container">
+      <p>Phoenix, AZ</p>
+    </div>
     <!-- <span><img src="flag.png" /></span> -->
-
-    <p>Phoenix, AZ</p>
-    <div id="clock-container">
-      <!-- THIS IS WHERE THE TIME IS DISPLAYED -->
+    <div class="container">
+      <br />
+      <div id="clock-container">
+        <!-- THIS IS WHERE THE TIME IS DISPLAYED -->
+      </div>
     </div>
 
     <script src="app.js"></script>
