added geocode to get location

--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Clock</title>
     <link rel="stylesheet" href="main.css" />
+    <script src="app.js" async></script>
   </head>
   <body>
     <div class="location-container">
-      <p>Phoenix, AZ</p>
+      <p id="city">Phoenix, AZ</p>
     </div>
-    <!-- <span><img src="flag.png" /></span> -->
+
     <div class="container">
-      <br />
       <div id="clock-container">
         <!-- THIS IS WHERE THE TIME IS DISPLAYED -->
       </div>
     </div>
+  
 
-    <script src="app.js"></script>
+
+
+
+
   </body>
 </html>
